color from screenshot

--- a/development/styles/_basics.css
+++ b/development/styles/_basics.css
@@ -64,7 +64,7 @@
         .basics__tile--omnichanelling {
             grid-column: 4 / 6;
             grid-row: 2 / 5;
-            background-color: #BFC6EF;
+            background-color: #B6BEF2;
         }
 
         .basics__tile--user-data {
