--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -31,3 +31,6 @@
 @import url("_nobr.css");
 @import url("_basics.css");
 @import url("_about.css");
+@import url("_tariffs.css");
+@import url("_check.css");
+@import url("_plan.css");
