--- a/development/styles/_plan.css
+++ b/development/styles/_plan.css
@@ -46,3 +46,59 @@
         font-size: 16px;
         line-height: 23px;
     }
+
+
+
+@media (max-width: 599px) {
+
+    .plan {
+        padding-bottom: 55px;
+        padding-bottom: 41px;
+        /*text-align: center;*/
+    }
+        .plan__heading {
+            /*font-family: var(--font-headings);*/
+            /*font-weight: bold;*/
+            /*font-size: 24px;*/
+            /*line-height: 30px;*/
+            /*color: var(--action);*/
+        }
+
+        .plan__price {
+            /*position: relative;*/
+            margin-top: 3px;
+            /*font-family: var(--font-headings);*/
+            /*font-weight: bold;*/
+            /*font-size: 32px;*/
+            /*line-height: 43px;*/
+        }
+            .plan__vat {
+                position: static;
+                /*left: 0;*/
+                /*right: 0;*/
+                /*top: 100%;*/
+                margin-top: 0;
+                display: block;
+                /*font-size: 10px;*/
+                /*line-height: 30px;*/
+                /*color: var(--action);*/
+            }
+
+        .plan__trial {
+            margin-top: 20px;
+            /*font-weight: 500;*/
+            /*font-size: 16px;*/
+            /*line-height: 30px;*/
+            /*color: var(--action);*/
+        }
+
+        .plan__note {
+            margin-top: 4px;
+            max-width: 300px;
+            /*margin-left: auto;*/
+            /*margin-right: auto;*/
+            /*font-weight: normal;*/
+            /*font-size: 16px;*/
+            /*line-height: 23px;*/
+        }
+}
