--- a/development/styles/_tariffs.css
+++ b/development/styles/_tariffs.css
@@ -103,7 +103,7 @@
     }
 
     .tariffs {
-        /*padding-bottom: 81px;*/
+        padding-bottom: 21px;
     }
         .tariffs__table {
             /*vertical-align: top;*/
