--- a/development/styles/_footer.css
+++ b/development/styles/_footer.css
@@ -1,7 +1,7 @@
 .footer {
     padding-top: 100px;
     padding-bottom: 100px;
-    background-color: #367AF7;
+    background-color: var(--background-accent);
 }
     .footer__wrap {
 
