--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -34,4 +34,4 @@
 @import url("_tariffs.css");
 @import url("_check.css");
 @import url("_plan.css");
-@import url("_selling.css");
+@import url("_now.css");
