--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -35,3 +35,5 @@
 @import url("_check.css");
 @import url("_plan.css");
 @import url("_now.css");
+@import url("_link.css");
+@import url("_button-alike-link.css");
