--- a/development/styles/_footer.css
+++ b/development/styles/_footer.css
@@ -75,6 +75,7 @@
                 display: flex;
                 align-items: flex-start;
                 justify-content: flex-end;
+                gap: 34px;
             }
                 .footer__link {
                     display: inline-block;
