--- a/development/styles/_footer.css
+++ b/development/styles/_footer.css
@@ -40,16 +40,43 @@
                         .footer__param {
                             font-family: var(--font-headings);
                             font-weight: bold;
-                            font-size: 32px;
-                            line-height: 43px;
+                            font-size: 24px;
+                            line-height: 32px;
                         }
 
                         .footer__value {
-                            margin-top: 8px;
+                            margin-top: 10px;
                         }
 
+                        @media (min-width: 360px) and (max-width: 374px) {
+                            .footer__value {
+                                font-size: 15px;
+                            }
+                        }
+
+                @media (max-width: 359px) {
+                    .footer__contacts {
+                        display: block;
+                    }
+                        .footer__channel {
+                            margin-top: 30px;
+                        }
+
+                        .footer__channel:first-child {
+                            margin-top: 0;
+                        }
+
+                            .footer__param {
+
+                            }
+
+                            .footer__value {
+                                margin-top: 0;
+                            }
+                }
+
             .footer__feedbacks {
-                margin-top: 5px;
+                margin-top: 37px;
                 max-width: 595px;
                 padding: 48px;
                 flex-grow: 1;
@@ -90,5 +117,124 @@
                 font-size: 16px;
                 line-height: 23px;
             }
+
+
+
+@media (max-width: 599px) {
+
+    .footer {
+        /*background-color: var(--background-accent);*/
+        /*color: #FFFFFF;*/
+    }
+        .footer__wrap {
+
+        }
+            .footer__primary {
+                display: block;
+                /*align-items: flex-start;*/
+                /*justify-content: space-between;*/
+                /*gap: 60px;*/
+                padding-top: 33px;
+                padding-bottom: 64px;
+            }
+                .footer__summary {
+
+                }
+                    .footer__heading {
+                        /*display: block;*/
+                        /*margin-top: 0;*/
+                        /*margin-bottom: 0;*/
+                        white-space: normal;
+                    }
+
+                    @media (min-width: 360px) and (max-width: 374px) {
+                        .footer__heading {
+                            font-size: 31px;
+                        }
+                    }
+
+                    @media (max-width: 359px) {
+                        .footer__heading {
+                            font-size: 27px;
+                        }
+                    }
+
+                    .footer__slogan {
+                        margin-top: 10px;
+                        /*font-weight: 500;*/
+                        font-size: 16px;
+                        line-height: 27px;
+                    }
+
+                    .footer__contacts {
+                        margin-top: 37px;
+                        /*display: flex;*/
+                        /*align-items: flex-start;*/
+                        justify-content: space-between;
+                        gap: 10px;
+                    }
+                        .footer__channel {
+
+                        }
+                            .footer__param {
+                                /*font-family: var(--font-headings);*/
+                                /*font-weight: bold;*/
+                                /*font-size: 32px;*/
+                                /*line-height: 43px;*/
+                            }
+
+                            .footer__value {
+                                margin-top: 0;
+                            }
+
+                .footer__feedbacks {
+                    /*margin-top: 5px;*/
+                    /*max-width: 595px;*/
+                    padding: 22px;
+                    /*flex-grow: 1;*/
+                    /*flex-shrink: 0;*/
+                    /*background-color: rgba(255, 255, 255, 0.1);*/
+                    /*border-radius: 10px;*/
+                }
+
+            .footer__secondary {
+                /*border-top: 2px solid #FFFFFF;*/
+                padding-top: 38px;
+                /*padding-bottom: 32px;*/
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                /*align-items: flex-start;*/
+                /*flex-wrap: wrap;*/
+            }
+                .footer__emblem {
+
+                }
+
+                .footer__menu {
+                    margin-top: 35px;
+                    /*flex-grow: 1;*/
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    /*align-items: flex-start;*/
+                    /*justify-content: flex-end;*/
+                    gap: 0;
+                }
+                    .footer__link {
+                        /*display: inline-block;*/
+                        /*vertical-align: top;*/
+                        /*color: inherit;*/
+                        /*text-decoration: none;*/
+                        font-size: 20px;
+                        line-height: 28px;
+                    }
+
+                .footer__copyright {
+                    margin-top: 36px;
+                    /*width: 100%;*/
+                    text-align: center;
+                }
+}
 
 
