--- a/development/styles/_now.css
+++ b/development/styles/_now.css
@@ -6,6 +6,7 @@
     background-repeat: no-repeat;
     background-position: center bottom -456px;
     text-align: center;
+    overflow: hidden; /* cut shadow */
 }
     .now__wrap {
 
