--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -37,3 +37,5 @@
 @import url("_now.css");
 @import url("_link.css");
 @import url("_button-alike-link.css");
+@import url("_contact.css");
+@import url("_input.css");
