--- a/development/styles/_button.css
+++ b/development/styles/_button.css
@@ -47,3 +47,11 @@
     background-color: #EEEEEE;
 }
 
+
+
+.button--submit {
+    padding: 12px 44px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 26px;
+}
