--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -1,4 +1,5 @@
 @import url("../vendors/normalize/normalize.css");
+@import url("../vendors/magnific-popup/dist/magnific-popup.css");
 @import url("_html.css");
 @import url("_body.css");
 @import url("_button.css");
@@ -39,3 +40,6 @@
 @import url("_button-alike-link.css");
 @import url("_contact.css");
 @import url("_input.css");
+@import url("_mfp.css");
+@import url("_window.css");
+@import url("_article.css");
