--- a/development/styles/_root.css
+++ b/development/styles/_root.css
@@ -5,6 +5,8 @@
     --container-padding: 40px;
     --base-font-size: 20px;
     --base-line-height: 29px;
+    --small-font-size: 16px;
+    --small-line-height: 22px;
     --background-accent: #0B80BD;
     --alternative: #E7E7E7;
     --action: #0B80BD;
