--- a/development/styles/_article.css
+++ b/development/styles/_article.css
@@ -1,3 +1,16 @@
 .article {
     max-width: 800px;
+    padding: 27px 40px 40px;
 }
+    .article__heading {
+        margin-top: 0;
+        margin-bottom: 0;
+        font-family: var(--font-headings);
+        font-weight: bold;
+        font-size: 36px;
+        line-height: 48px;
+    }
+
+    .article__content {
+        margin-top: 30px;
+    }
