--- a/development/styles/_wysiwyg.css
+++ b/development/styles/_wysiwyg.css
@@ -29,6 +29,22 @@
 
 
 
+.wysiwyg--smaller {
+    font-size: var(--small-font-size);
+    line-height: var(--small-line-height);
+}
+
+.wysiwyg--smaller p,
+.wysiwyg--smaller ul,
+.wysiwyg--smaller ol,
+.wysiwyg--smaller hr,
+.wysiwyg--smaller figure,
+.wysiwyg--dense blockquote {
+    margin-top: var(--small-line-height);
+    margin-bottom: var(--small-line-height);
+}
+
+
 /* Общие стили для всех вариантов */
 
 .wysiwyg p:first-child,
@@ -108,29 +124,35 @@
 
 
 
-/*.wysiwyg h2 {*/
+.wysiwyg h2 {
+    font-family: var(--font-headings);
+    font-weight: bold;
 /*    font-weight: var(--font_weight_strong);*/
 /*    font-size: var(--font_size_default-title);*/
 /*    line-height: var(--font_line_default-title);*/
 /*    margin-top: var(--font_line_default-title);*/
 /*    margin-bottom: var(--font_line_default-title);*/
-/*}*/
+}
 
-/*.wysiwyg h3 {*/
+.wysiwyg h3 {
+    font-family: var(--font-headings);
+    font-weight: bold;
 /*    font-weight: var(--font_weight_strong);*/
 /*    font-size: var(--font_size_smaller-title);*/
 /*    line-height: var(--font_line_smaller-title);*/
 /*    margin-top: var(--font_line_smaller-title);*/
 /*    margin-bottom: var(--font_line_smaller-title);*/
-/*}*/
+}
 
-/*.wysiwyg h4 {*/
+.wysiwyg h4 {
+    font-family: var(--font-headings);
+    font-weight: bold;
 /*    font-weight: var(--font_weight_strong);*/
 /*    font-size: var(--font_size_smallest-title);*/
 /*    line-height: var(--font_line_smallest-title);*/
 /*    margin-top: var(--font_line_smallest-title);*/
 /*    margin-bottom: var(--font_line_smallest-title);*/
-/*}*/
+}
 
 /*.wysiwyg h2:first-child,*/
 /*.wysiwyg h3:first-child,*/
