modal close and clean up

--- a/development/styles/_benefits.css
+++ b/development/styles/_benefits.css
@@ -42,10 +42,15 @@
                 background-color: #F3F3F3;
             }
 
+            .benefits__tag:active {
+                transform: translateY(1px);
+            }
+
             .benefits__tag--current,
             .benefits__tag--current:hover {
                 background-color: var(--background-accent);
                 color: #FFFFFF;
+                transform: none;
                 cursor: default;
             }
 
