--- a/development/styles/_article.css
+++ b/development/styles/_article.css
@@ -1,10 +1,11 @@
 .article {
     max-width: 800px;
-    padding: 27px 40px 40px;
+    padding: 38px var(--container-padding) var(--container-padding);
 }
     .article__heading {
         margin-top: 0;
         margin-bottom: 0;
+        margin-right: 40px;
         font-family: var(--font-headings);
         font-weight: bold;
         font-size: 36px;
@@ -12,5 +13,28 @@
     }
 
     .article__content {
-        margin-top: 30px;
+        margin-top: 28px;
     }
+
+
+
+@media (max-width: 599px) {
+
+    .article {
+        /*max-width: 800px;*/
+        /*padding: 38px 40px 40px;*/
+    }
+        .article__heading {
+            /*margin-top: 0;*/
+            /*margin-bottom: 0;*/
+            /*margin-right: 40px;*/
+            /*font-family: var(--font-headings);*/
+            /*font-weight: bold;*/
+            font-size: 24px;
+            line-height: 32px;
+        }
+
+        .article__content {
+            /*margin-top: 28px;*/
+        }
+}
